[gd_scene load_steps=5 format=3 uid="uid://1ynxxobmva8"]

[ext_resource type="StyleBox" uid="uid://skjp7qat3stj" path="res://Common/CustomResources/Buttons/MainMenuButton_Normal.tres" id="1_lnwwk"]
[ext_resource type="Script" uid="uid://d3bgn5y3ixkjo" path="res://Stages/HostMenu/host_menu.gd" id="1_n3nwc"]
[ext_resource type="StyleBox" uid="uid://bo1xujyi6uiin" path="res://Common/CustomResources/Buttons/MainMenuButton_Hover.tres" id="2_n3nwc"]
[ext_resource type="Texture2D" uid="uid://di42c04urry3p" path="res://Assets/Backgrounds/main_menu_bg.png" id="2_nypa7"]

[node name="HostMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3nwc")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.75500655, 0.75503004, 0.7438053, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nypa7")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Host Game"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="PortEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 10
placeholder_text = "ex: 7777"
alignment = 3
max_length = 4
emoji_menu_enabled = false

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Password:"

[node name="PasswordEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/minimum_character_width = 10
placeholder_text = "enter your password"
alignment = 3
emoji_menu_enabled = false

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("1_lnwwk")
theme_override_styles/pressed = ExtResource("2_n3nwc")
theme_override_styles/hover = ExtResource("2_n3nwc")
theme_override_styles/hover_pressed = ExtResource("2_n3nwc")
theme_override_styles/focus = ExtResource("2_n3nwc")
text = "Back"

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("1_lnwwk")
theme_override_styles/pressed = ExtResource("2_n3nwc")
theme_override_styles/hover = ExtResource("2_n3nwc")
theme_override_styles/hover_pressed = ExtResource("2_n3nwc")
theme_override_styles/focus = ExtResource("2_n3nwc")
text = "Start Hosting"
